--- a/Clinic/appsettings.json
+++ b/Clinic/appsettings.json
@@ -9,8 +9,21 @@
   "ConnectionStrings": {
     "cs": "Server=db26428.public.databaseasp.net; Database=db26428; User Id=db26428; Password=7b_St?J8+2fQ; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True; "
 
+  },
+  "EmailSettings": {
+    "Email": "nadaashraf102004@gmail.com",
+    "DisplayName": "Nada Ashraf",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "Password": "yqom uzlj ssvi bvtk"
+  },
+  "JwtSettings": {
+    "Audience": "https://localhost:7035/",
+    "Issuer": "https://localhost:7035/",
+    "Secret": "ByYM5Mdrfghbn1OH7Xzyr7gyuoknhbgfcSNM",
+    "ExpirationHours": 1
   }
-  
+
 }
 
 
