--- a/ClinicApplication/ClinicApplication.csproj
+++ b/ClinicApplication/ClinicApplication.csproj
@@ -14,4 +14,11 @@
     <Folder Include="Specification\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+    <PackageReference Include="MailKit" Version="4.13.0" />
+    <PackageReference Include="MimeKit" Version="4.13.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+  </ItemGroup>
+
 </Project>
